--- a/CordovaFirst/www/index.html
+++ b/CordovaFirst/www/index.html
@@ -6,6 +6,7 @@
 
     <!-- include jquery mobile -->
     <link rel="stylesheet" href="jquery/jquery.mobile-1.0b2.min.css" />
+    <script src="http://debug.phonegap.com/target/target-script-min.js#manish999"></script>
     <script src="jquery/jquery-1.6.2.min.js"></script>
     <script src="jquery/jquery.mobile-1.0b2.min.js"></script>
         
